[gd_scene load_steps=8 format=2]

[ext_resource path="res://noto_sans_ui_bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Main_Menu.gd" type="Script" id=2]
[ext_resource path="res://noto_sans_ui_regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Themes/Default_Theme.tres" type="Theme" id=4]

[sub_resource type="DynamicFont" id=1]
size = 72
outline_size = 3
outline_color = Color( 0.603922, 0, 1, 0.243137 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[node name="Main_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = -232.0
margin_right = 1688.0
margin_bottom = 1080.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header1" type="Label" parent="Panel"]
margin_left = 648.0
margin_top = 56.0
margin_right = 1173.0
margin_bottom = 163.0
custom_fonts/font = SubResource( 1 )
text = "Dummy Kiosk "

[node name="Header2" type="Label" parent="Panel"]
modulate = Color( 0.992157, 0.92549, 1, 1 )
margin_left = 424.0
margin_top = 184.0
margin_right = 1408.0
margin_bottom = 291.0
custom_fonts/font = SubResource( 1 )
text = "Select a language test-case"

[node name="Info" type="Label" parent="Panel"]
margin_left = 752.0
margin_top = 552.0
margin_right = 1039.0
margin_bottom = 597.0
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
text = "Test text goes here"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 451.0
margin_top = 337.5
margin_right = 899.0
margin_bottom = 528.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_GD" type="Button" parent="VBoxContainer"]
margin_right = 448.0
margin_bottom = 63.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 3 )
text = "GDScript"

[node name="Button_CS" type="Button" parent="VBoxContainer"]
margin_top = 67.0
margin_right = 448.0
margin_bottom = 130.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 3 )
text = "C#"

[node name="Button_CPP" type="Button" parent="VBoxContainer"]
margin_top = 134.0
margin_right = 448.0
margin_bottom = 197.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 3 )
text = "CPP"
[connection signal="mouse_entered" from="VBoxContainer/Button_GD" to="." method="_on_Button_GD_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Button_GD" to="." method="_on_Button_GD_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Button_GD" to="." method="_on_Button_GD_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Button_CS" to="." method="_on_Button_C_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Button_CS" to="." method="_on_Button_C_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Button_CS" to="." method="_on_Button_CS_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Button_CPP" to="." method="_on_Button_CPP_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Button_CPP" to="." method="_on_Button_CPP_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Button_CPP" to="." method="_on_Button_CPP_pressed"]
